--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,9 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               {
-                "glob": "**/*",
-                "input": "public"
+              "glob": "**/*",
+              "input": "src/assets",
+              "output": "assets/"
               }
             ],
             "styles": [
