update angular.json The "ignore": ["icons/*.svg"] line is used within an asset configuration in your angular.json file. It tells the Angular CLI to exclude all SVG files located in the icons subdirectory from being copied to the output assets folder during the build process.

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,13 @@
               {
               "glob": "**/*",
               "input": "src/assets",
-              "output": "assets/"
+              "output": "assets/",
+              "ignore": ["icons/*.svg"]
+              },
+              {
+                "glob": "favicon.ico",
+                "input": "src",
+                "output": "/"
               }
             ],
             "styles": [
